[SW-86] Integration tests for sparkling-water-core